--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A personal recipe book application with Firebase authentication and Firestore database",
   "main": "index.html",
   "scripts": {
-    "dev": "npx http-server . -p 3000",
-    "build": "echo 'Static site - no build needed'",
-    "start": "npx http-server . -p 8080"
+    "dev": "node build-config.js && npx http-server . -p 3000",
+    "build": "node build-config.js",
+    "start": "node build-config.js && npx http-server . -p 8080",
+    "config": "node build-config.js"
   },
   "keywords": [
     "recipe",
